[package]
name = "anki-csv-tool"
version = "0.1.0"
authors = ["Paul Tran <ptranx23@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1"
serde = "1.0"
serde_derive = "1.0"
directories = "2.0"
read_input="0.8"
tts-urls = "0.2"
reqwest = { version = "0.10", features = ["blocking"] }
zhuyin = { path = "../rust/zhuyin" }
colored = "2.0"